# Base_fastapi_app

./: .dockerignore  .env-non-dev-git  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: app.sh
example-base-app/: .env.template  alembic.ini  create_fastapi_app.py  main.py
example-base-app/actions/: create_superuser.py
example-base-app/alembic/versions/: 2024_08_06_1443-64ebcbd7853c_create_users_table.py  2024_08_09_2216-cd22358371a3_create_users_table.py  2024_08_10_0016-2b51185a4a94_create_access_tokens_table.py  2024_08_12_2240-37c9ad82863a_create_students_table.py  2024_08_12_2243-1160145b2a7e_create_student_grades_table.py  2024_08_12_2247-5adddd614cde_create_quartal_grade_table.py
example-base-app/api/api_v1/: __init__.py  auth.py  fastapi_users.py  quartal_grades.py  student_grades.py  students.py  users.py
example-base-app/api/dependencies/: access_tokens.py  fastapi_users.py
example-base-app/api/dependencies/authentication/: strategy.py  user_manager.py  users.py
example-base-app/core/: config.py
example-base-app/core/authentication/: user_manager.py
example-base-app/core/models/: __init__.py  base.py  quartal_grade.py  student.py  student_grade.py  user.py
example-base-app/core/models/mixins/: student_relation_mixin.py
example-base-app/core/schemas/: quartal_grade.py  student.py  student_grade.py
example-base-app/crud/: quartal_grades.py  student_grades.py  students.py
example-base-app/sql_queries/: aggregate_functions  ranking_functions  value_functions
