[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = { extras = ["standard"], version = "^0.30.5" }
pydantic = { extras = ["email"], version = "^2.8.2" }
pydantic-settings = "^2.4.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi-users = { extras = ["sqlalchemy"], version = "^13.0.0" }

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
